--- a/_includes/examples/html/date-time.html
+++ b/_includes/examples/html/date-time.html
@@ -1,4 +1,4 @@
-<form id="dateTimeDateForm" method="post" class="form-horizontal">
+<form id="dateTimeForm" method="post" class="form-horizontal">
     <div class="form-group">
         <label class="col-md-3 control-label">Date</label>
         <div class="col-md-6">
