--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,15 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="{{ site.keywords }}">
+    <meta name="author" content="{{ site.fullname }}">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- ================ -->
     <link rel="stylesheet" type="text/css" href="./stylesheets/print.css" media="print" />
     <link rel="stylesheet" type="text/css" href="./stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="./stylesheets/pygment_tango.css" media="screen" />
-    <!-- ================ -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
     <!--[if lt IE 9]>
@@ -34,9 +35,7 @@
     <div id="content-wrapper">
         <div class="inner clearfix">
             <section id="main-content">
-
                 {{ content }}
-
             </section>
 
             <aside id="sidebar">
